--- a/microservice-cloud-03-provider-product-8001/src/main/resources/application.yml
+++ b/microservice-cloud-03-provider-product-8001/src/main/resources/application.yml
@@ -6,10 +6,10 @@ eureka:
   instance:
     hostname: provider01 # eureka服务端的实例名称
   client:
-    registerWithEureka: true # 服务注册开关
-    fetchRegistry: true # 服务发现开关
-    serviceUrl: # 客户端(服务提供者)注册到哪一个Eureka Server服务注册中心，多个用逗号分隔
-      defaultZone: http://localhost:8762/eureka/,http://localhost:8763/eureka/,http://localhost:8764/eureka/
+    registerWithEureka: true # 服务注册开关
+    fetchRegistry: true # 服务发现开关
+    serviceUrl: # 客户端(服务提供者)注册到哪一个Eureka Server服务注册中心，多个用逗号分隔
+      defaultZone: http://localhost:8763/eureka/
 
 
 mybatis:
