--- a/microservice-cloud-01/pom.xml
+++ b/microservice-cloud-01/pom.xml
@@ -13,8 +13,10 @@
     <modules>
         <module>../microservice-cloud-02-api</module>
         <module>../microservice-cloud-03-provider-product-8001</module>
+        <module>../microservice-cloud-06-provider-product-8002</module>
         <module>../microservice-cloud-04-consumer-product-80</module>
         <module>../microservice-cloud-05-eureka-6001</module>
+        <module>../microservice-cloud-05-eureka-6002</module>
     </modules>
 
     <parent>
