feign, 熔断器，网关

--- a/microservice-cloud-03-provider-product-8001/pom.xml
+++ b/microservice-cloud-03-provider-product-8001/pom.xml
@@ -24,6 +24,12 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
 
+        <!-- hytrix -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+        </dependency>
+
         <!--springboot web启动器-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
