--- a/microservice-cloud-01/pom.xml
+++ b/microservice-cloud-01/pom.xml
@@ -17,6 +17,7 @@
         <module>../microservice-cloud-04-consumer-product-80</module>
         <module>../microservice-cloud-05-eureka-6001</module>
         <module>../microservice-cloud-05-eureka-6002</module>
+        <module>../microservice-cloud-10-zuul-gateway-7001</module>
     </modules>
 
     <parent>
