--- a/microservice-cloud-04-consumer-product-80/src/main/resources/application.yml
+++ b/microservice-cloud-04-consumer-product-80/src/main/resources/application.yml
@@ -7,3 +7,6 @@ eureka:
     fetchRegistry: true # 服务发现开关
     serviceUrl: # 客户端(服务提供者)注册到哪一个Eureka Server服务注册中心，多个用逗号分隔
       defaultZone: http://eureka6001.com:6001/eureka/,http://eureka6002.com:6002/eureka/
+feign:
+  hystrix:
+    enabled: true #开启客户端熔断
