--- a/microservice-cloud-04-consumer-product-80/src/main/resources/application.yml
+++ b/microservice-cloud-04-consumer-product-80/src/main/resources/application.yml
@@ -1,12 +1,22 @@
 server:
   port: 80
 
+spring:
+  application:
+    name: microservice-consumer
+
 eureka:
   client:
     registerWithEureka: true # 服务注册开关
     fetchRegistry: true # 服务发现开关
     serviceUrl: # 客户端(服务提供者)注册到哪一个Eureka Server服务注册中心，多个用逗号分隔
       defaultZone: http://eureka6001.com:6001/eureka/,http://eureka6002.com:6002/eureka/
+  instance:
+    hostname: consumer # eureka服务端的实例名称
+    instanceId: ${spring.application.name}:${server.port} # 指定实例ID,就不会显示主机名了
+    prefer-ip-address: true # 访问路径可以显示ip地址
+
 feign:
   hystrix:
     enabled: true #开启客户端熔断
+
