--- a/microservice-cloud-03-provider-product-8001/pom.xml
+++ b/microservice-cloud-03-provider-product-8001/pom.xml
@@ -18,6 +18,13 @@
             <version>${project.version}</version>
         </dependency>
 
+        <!-- Spring Cloud Config 客户端依赖-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+        <!-- 导入Eureka-server 服务端依赖 -->
+
         <!-- 导入Eureka客户端的依赖，将 微服务提供者 注册进 Eureka -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
