--- a/microservice-cloud-05-eureka-6001/pom.xml
+++ b/microservice-cloud-05-eureka-6001/pom.xml
@@ -13,6 +13,12 @@
     <artifactId>microservice-cloud-05-eureka-6001</artifactId>
 
     <dependencies>
+        <!-- Spring Cloud Config 客户端依赖-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+        <!-- 导入Eureka-server 服务端依赖 -->
         <!-- 导入Eureka-server 服务端依赖 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
