配置中心整合

--- a/microservice-cloud-03-provider-product-8001/src/main/resources/bootstrap.yml
+++ b/microservice-cloud-03-provider-product-8001/src/main/resources/bootstrap.yml
@@ -2,6 +2,6 @@ spring:
   cloud:
     config:
       name: microservice-product8001-application
-      profile: test
+      profile: dev
       label: master
       uri: http://localhost:5001
