--- a/microservice-cloud-04-consumer-product-80/pom.xml
+++ b/microservice-cloud-04-consumer-product-80/pom.xml
@@ -7,6 +7,7 @@
         <groupId>com.mengxuegu.springclould</groupId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../microservice-cloud-01/pom.xml</relativePath>
+
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -34,5 +35,14 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
