--- a/microservice-cloud-05-eureka-6001/pom.xml
+++ b/microservice-cloud-05-eureka-6001/pom.xml
@@ -19,12 +19,19 @@
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
         <!-- 导入Eureka-server 服务端依赖 -->
-        <!-- 导入Eureka-server 服务端依赖 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
