--- a/microservice-cloud-05-eureka-6002/pom.xml
+++ b/microservice-cloud-05-eureka-6002/pom.xml
@@ -5,7 +5,7 @@
 		<artifactId>microservice-cloud-01</artifactId>
 		<groupId>com.mengxuegu.springclould</groupId>
 		<version>1.0-SNAPSHOT</version>
-<!--		<relativePath>../microservice-cloud-01/pom.xml</relativePath>-->
+		<relativePath>../microservice-cloud-01/pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.mengxuegu.springclould</groupId>
