--- a/microservice-cloud-10-zuul-gateway-7001/pom.xml
+++ b/microservice-cloud-10-zuul-gateway-7001/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>com.mengxuegu.springclould</groupId>
 		<artifactId>microservice-cloud-01</artifactId>
 		<version>1.0-SNAPSHOT</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath>../microservice-cloud-01/pom.xml</relativePath>
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>microservice-cloud-10-zuul-gateway-7001</artifactId>
