--- a/microservice-cloud-11-config-server-5001/pom.xml
+++ b/microservice-cloud-11-config-server-5001/pom.xml
@@ -6,10 +6,10 @@
         <groupId>com.mengxuegu.springclould</groupId>
         <artifactId>microservice-cloud-01</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath>../microservice-cloud-01/pom.xml</relativePath>
     </parent>
     <groupId>com.mengxuegu.springclould</groupId>
-    <artifactId>microservice-cloud-11-config-server</artifactId>
+    <artifactId>microservice-cloud-11-config-server-5001</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>microservice-cloud-11-config-server</name>
     <description>Demo project for Spring Boot</description>
@@ -33,17 +33,6 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
-       <!-- <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.junit.vintage</groupId>
-                    <artifactId>junit-vintage-engine</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>-->
     </dependencies>
 
     <build>
